Bug 151621 - The embedded PPTX file shows as in 3000% zoom
Summary: The embedded PPTX file shows as in 3000% zoom
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords:
Depends on:
Blocks: OLE-Objects
  Show dependency treegraph
 
Reported: 2022-10-18 12:52 UTC by NISZ LibreOffice Team
Modified: 2022-11-02 10:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File for testing (47.34 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-10-18 12:56 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-10-18 12:52:23 UTC
Description:
he example file was created in Word 365 and contains an embedded PPTX.
In Writer, the inserted object opens at 3000% zoom when double-clicking on it.


Steps to Reproduce:
1. Open attached file in Writer.
2. Double-click on the inserted object.

Actual Results:
The inserted object opens at 3000% zoom.

Expected Results:
The inserted object opens without zoom.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: e051b3a6d59ed925e1cddfa72696c9a740830808
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-10-18 12:56:00 UTC
Created attachment 183112 [details]
File for testing
Comment 2 raal 2022-10-18 16:13:13 UTC
Confirm with Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 2e887e04c0008a4eb6cbf34050b6fa463a33599f
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Version: 6.3.0.0.alpha1+
Comment 3 Commit Notification 2022-10-27 18:06:19 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6e378b5beee473edc54c50550eff9e7d9eec57b5

tdf#151621 sd UI: use correct zoom in embedded PPTX

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-10-28 07:01:00 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 02db1642c9ce4394f4f85755c4a0a831e547e4fb
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 5 Commit Notification 2022-11-02 10:01:03 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/d9b73c3579cb6a16bb82c0e0e1643ae0893c52e5

tdf#151621 sd UI: use correct zoom in embedded PPTX

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.