tdf#151621 sd UI: use correct zoom in embedded PPTX

Embedded PPTX object opened at 3000% zoom in a new window.

Change-Id: I7b353b607a1cef84eceaac5fbff96f2fbeb18500
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141528
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 6e378b5beee473edc54c50550eff9e7d9eec57b5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142143
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>